--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@ button {
 <body>
 
 <div class="header">
-  Siemens – MPT Current
+  MPT CURRENT CALCULATOR
+  <i>This is standard formula. Need to reduce current and verify with Shims/Strip/Tangential Field Meter</i>
 </div>
 
 <div class="container">
@@ -147,4 +148,5 @@ function calculate() {
 
 </body>
 </html>
+
 
