--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ button {
 <body>
 
 <div class="header">
-  MPT CURRENT CALCULATOR
-  <i>This is standard formula. Need to reduce current and verify with Shims/Strip/Tangential Field Meter</i>
+  MPT CURRENT CALCULATOR<br>
+  <i><small>This is standard formula. Need to reduce current and verify with Shims/Strip/Tangential Field Meter</small></i>
 </div>
 
 <div class="container">
@@ -148,5 +148,6 @@ function calculate() {
 
 </body>
 </html>
+
 
 
