--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ button {
 
 <div class="header">
   MPT CURRENT CALCULATOR<br>
-  <i><small>This is standard formula. Need to reduce current and verify with Shims/Strip/Tangential Field Meter</small></i>
+  <i><small>This is standard formula. Need to reduce current by <b>50%</b> and then slowly increase current and verify with Shims/Castrol Strip/Tangential Field Meter</small></i>
 </div>
 
 <div class="container">
@@ -148,6 +148,7 @@ function calculate() {
 
 </body>
 </html>
+
 
 
 
